--- a/index.html
+++ b/index.html
@@ -243,39 +243,48 @@
   <div class="container">
     <div class="row row-projects bg-color text-center">
       <div class="col-lg-6 my-2 pb-3 project-div">
-        <a class="btn btn-primary btn-lg p-2" href="https://github.com/techx-guy/Fire-Scripts-CLI" target="_blank" role="button">Fire Scripts CLI</a>
-        <a href="https://github.com/techx-guy/Fire-Scripts-CLI" target="_blank" draggable="false">
-          <img src="img/Fire Scripts CLI Splash.png" alt="github project 1" class="project1" draggable="false">
+        <a class="btn btn-primary btn-lg p-2" href="https://stargate-app.herokuapp.com/" target="_blank" role="button">Stargate App</a>
+        <a href="https://stargate-app.herokuapp.com/" target="_blank" draggable="false">
+          <img src="img/stargate.jpeg" alt="github project 1" class="project1" draggable="false">
         </a>
+        <p>Descriptions coming soon!</p>
     </div>
   
     <div class="col-lg-6 my-2 pb-3 project-div">
-      <a class="btn btn-primary btn-lg p-2" href="https://github.com/techx-guy/Fire-Scripts-GUI" target="_blank" role="button">Fire Scripts GUI</a>
-      <a href="https://github.com/techx-guy/Fire-Scripts-GUI" target="_blank" draggable="false">
-        <img src="img/Fire Scripts GUI Splash.png" alt="github project 3" class="project1" draggable="false">
+      <a class="btn btn-primary btn-lg p-2" href="https://powerful-ravine-36007.herokuapp.com/" target="_blank" role="button">Tech Blog App</a>
+      <a href="https://powerful-ravine-36007.herokuapp.com/" target="_blank" draggable="false">
+        <img src="img/TechBlog.png" alt="github project 3" class="project1" draggable="false">
       </a>
+      <p>Descriptions coming soon!</p>
+
     </div>
 
 
     <div class="col-lg-6 my-2 pb-5 project-div">
-      <a class="btn btn-primary btn-lg p-2 mb-3 mt-4" href="https://liquidflowprops.wixsite.com/phoenix-fire" target="_blank" role="button">Phoenix Fire</a>
-      <a href="https://liquidflowprops.wixsite.com/phoenix-fire" target="_blank" draggable="false">
-        <img src="img/Phoenix Site.png" alt="phoenix fire" class="project1 pb-4" draggable="false">
+      <a class="btn btn-primary btn-lg p-2 mb-3 mt-4" href="https://sleepy-sands-83443.herokuapp.com/" target="_blank" role="button">Note Taker</a>
+      <a href="https://sleepy-sands-83443.herokuapp.com/" target="_blank" draggable="false">
+        <img src="img/NoteTaker.png" alt="note taker screenshot" class="project1 pb-4" draggable="false">
       </a>
+              <p>Descriptions coming soon!</p>
+
     </div>
 
       <div class="col-lg-6 my-2 project-div">
-        <a class="btn btn-primary btn-lg p-2 mb-3 mt-4" href="https://liquidflowprops.wixsite.com/liquidflowprops" target="_blank" role="button">Liquid Flow</a>
-        <a href="https://liquidflowprops.wixsite.com/liquidflowprops" target="_blank" draggable="false">
-          <img src="img/LF Site.png" alt="Liquid flow" class="project1 pb-4 resize-img" draggable="false">
+        <a class="btn btn-primary btn-lg p-2 mb-3 mt-4" href="https://techx-guy.github.io/TastyBytes/" target="_blank" role="button">Tasty Bytes</a>
+        <a href="https://techx-guy.github.io/TastyBytes/" target="_blank" draggable="false">
+          <img src="img/TastyOg.png" alt="Liquid flow" class="project1 pb-4 resize-img" draggable="false">
       </a>
+              <p>Descriptions coming soon!</p>
+
     </div>
 
     <div class="col-lg-6 my-5 mx-auto pb-5 project-div">
-      <a class="btn btn-primary btn-lg p-2 mt-5" href="https://github.com/techx-guy/Portfolio-Site-Project" target="_blank" role="button">Portfolio Website</a>
+      <a class="btn btn-primary btn-lg p-2 mt-5" href="https://github.com/techx-guy/Portfolio-Site-Project" target="_blank" role="button">Portfolio Website (This Site)</a>
       <a href="https://github.com/techx-guy/Portfolio-Site-Project" target="_blank" draggable="false">
         <img src="img/My Site Splash.png" alt="github project 2" class="project1 pb-2" draggable="false">
       </a>
+              <p>Descriptions coming soon!</p>
+
     </div>
         <!-- Project6
 
@@ -390,14 +399,14 @@
                         <div id="contact" class="text-center">
                           <h4 class="fade-in show-on-scroll">Questions, Comments, Ideas?</h4>
                           <div>
-                            <a href="mailto:techx-guy@opayq.com?subject=Contact From Website&body=Hi Anthony," target="_blank">
-                          <button class="btn btn-primary btn-lg my-5 p-3"> Let's Connect!</button>
-                            </a>
                             <a href="https://www.linkedin.com/in/anthony-gress/" target="_blank">
-                              <button class="btn btn-primary btn-lg my-5 p-3"> Linkedin</button>
+                              <button class="btn btn-primary btn-lg my-5 p-2 mx-2"> Linkedin</button>
+                            </a>
+                            <a href="mailto:techx-guy@opayq.com?subject=Contact From Website&body=Hi Anthony," target="_blank">
+                          <button class="btn btn-primary btn-lg my-5 p-2 mx-2"> Let's Connect!</button>
                             </a>
                             <a href="https://github.com/techx-guy/" target="_blank">
-                              <button class="btn btn-primary btn-lg my-5 p-3"> GitHub</button>
+                              <button class="btn btn-primary btn-lg my-5 p-2 mx-2"> GitHub</button>
                             </a>
                           </div>
                         </div>
