updated professional photo

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <div class="container">
   <div class="row" id="about">
       <div class="col-lg-6">
-        <img class="half-panel" src="img/demo_headshot.JPG" alt="headshot" loading="lazy" draggable="false">
+        <img class="half-panel" src="img/ChairCharcoal.jpg" alt="headshot" loading="lazy" draggable="false">
       </div>
   
     <div class="col-lg">
